# wxmeasure

./: CMakeLists.txt  MIT.txt  README.md  inno.sh  make-appimage.pl  wxmeasure.iss  wxmeasure.rc  wxmeasure.xpm
src/: CMakeLists.txt  measurepane.cpp  measurepane.h  myConfig.cpp  myConfig.h  myPropertyDialog.cpp  myPropertyDialog.h  strutil.cpp  strutil.h  wxmeasure.cpp
